# omada-saml-oidc

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  data.json  omada-saml-oidc.env.example  prek.toml  pyproject.toml
.github/workflows/: prek_autoupdate.yml  publish.yml  pytest_coverage.yml
examples/: docker-compose.yml  nginx-authelia.conf  nginx-pocket-id.conf  traefik-authelia.yml  traefik-pocket-id.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_24230d83570021c2___init___py.html  z_24230d83570021c2___main___py.html  z_24230d83570021c2_acs_proxy_py.html  z_24230d83570021c2_certs_py.html  z_24230d83570021c2_config_py.html  z_24230d83570021c2_launcher_py.html  z_24230d83570021c2_router_py.html  z_24230d83570021c2_satosa_config_py.html  z_24230d83570021c2_secrets_py.html  z_24230d83570021c2_supervisor_py.html  z_d83fd542b1b4f5f5___init___py.html  z_d83fd542b1b4f5f5_backend_py.html  z_d83fd542b1b4f5f5_frontend_py.html
src/omada_saml_oidc/: __init__.py  __main__.py  acs_proxy.py  certs.py  config.py  launcher.py  router.py  satosa_config.py  secrets.py  supervisor.py
src/omada_saml_oidc/satosa_plugins/: __init__.py  backend.py  frontend.py
tests/: __init__.py  conftest.py  test_acs_proxy.py  test_config.py  test_launcher.py  test_router.py  test_satosa_config.py  test_secrets_and_certs.py  test_supervisor.py
